fixing layout issues to the index.html/css, making it scale better to different screen sizes. Still not perfect though..

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
     --brown-accent-3: #AA6C39;
     --brown-accent-4: #804515;
     --brown-accent-5: #552700;
+    --transparent-brown-1: #ffd2aab0;
 
     --teal-accent-1: #669999;
     --teal-accent-2: #407F7F;
@@ -19,22 +20,26 @@
     --teal-accent-4: #0D4D4D;
     --teal-accent-5: #003333;
 
+
     --green-accent-1: #88CC88;
     --green-accent-2: #84CA84;
     --green-accent-3: #55AA55;
     --green-accent-4: #2D882D;
     --green-accent-5: #0F640F;
 
-    --content-max-width: 65ch;
+    --content-max-width: 65rem;
+
+    box-sizing: border-box;
 }
 a[href="furballs@furballcompany.com"]{
     color:var(--red-accent-1)
 }
 .about {
-    max-width: 120ch;
+    background-color: var(--brown-accent-1);
+    width: var(--content-max-width);
     margin: 0 auto;
     font-size: 1.5rem;
-    padding: 1rem;
+    padding: 10rem;
     line-height: 1.5;
     color: var(--teal-accent-5)
 }
@@ -45,7 +50,7 @@ a[href="furballs@furballcompany.com"]{
 
 body {
     margin: 0;
-    background-color: var(--brown-accent-1);
+    background-color: var(--green-accent-1);
 }
 
 .chapter {
@@ -53,17 +58,21 @@ body {
     line-height: 1.8;
     font-size: 1.2em;
     border-radius: 30px;
-    max-width: var(--content-max-width);
     margin: 0 auto;
-    padding: 2ch 8ch;
+    max-width: var(--content-max-width);
+    padding: 2rem 5rem;
+    width: 100%;
 }
-
+.centered {
+    text-align: center;
+}
 .cursive {
     font-style:italic;
 }
 
 .contact {
     display: flex;
+    width: 65rem;
 }
 .contact h1 {
     letter-spacing: 4px;
@@ -99,6 +108,7 @@ body {
     font-weight: bold;
     padding: 25px;
     width: 25ch;
+    max-width: 80%;
 }
 
 .form-wrapper button:hover {
@@ -108,31 +118,31 @@ body {
 }
 
 .form-wrapper form {
-    background-color: var(--brown-accent-5);
-    color: var(--brown-accent-1);
+    background-color: var(--teal-accent-5);
+    color: var(--red-accent-1);
     border: 2px solid;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
     margin: 50px auto;
-    width: 50%;
-    max-width: var(65ch);
+    width: 65ch;
+    max-width: 100%;
     padding: 20px;
     text-align: center;
-}
-
-.furball-story {
-    background-image: url('../img/furball-background.webp');
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding: 5rem;
 }
 
 .furball-story h1 {
     text-align: center;
 }
+.image-bg {
+    background-image: url('../img/furball-background-2.webp');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 10rem 0;
+}
+
 .image-text {
     display: flex;
     justify-content:center;
@@ -152,6 +162,7 @@ body {
 .label-input {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     width: 100%;
 }
 .label-input input {
@@ -180,6 +191,7 @@ body {
 .navbar {
     align-items: center;
     background-color: var(--green-accent-1);
+    border-bottom: 2px solid var(--brown-accent-1);
     display: flex;
     font-size: 2rem;
     height: 7vh;
@@ -218,10 +230,33 @@ body {
     border-color: var(--green-accent-1);
     width: 50%;
 }
-.text-background {
-    background-color: var(--red-accent-1);
+.statement {
+    font-size: 8rem;
+    color: var(--teal-accent-4);
+    font-weight: bold;
+    text-shadow: 5px 5px 1px var(--green-accent-1);
+    
+    text-align: center;
 }
-
+.subtext {
+    background-color: var(--transparent-brown-1);
+    border: 5px solid var(--brown-accent-1);
+    border-radius: 5rem;
+    box-shadow: -0px -25px 25px var(--red-accent-1);
+    color: var(--teal-accent-5);
+    font-size:1.5rem;
+    margin: 0 auto;
+    max-width: 30ch;
+    padding: 10px;
+    text-align: center;
+    text-shadow: 2px 3px 2px white;
+}
+.text-background {
+    background-color: var(--brown-accent-1);
+}
+.transparent-background {
+    background-color: var(--green-accent-1);
+}
 .weight-100 {
     font-weight: 100;
 }
